--- a/engine_configs.json
+++ b/engine_configs.json
@@ -1,17 +1,39 @@
 {
     "Unreal": {
         "name": "Unreal",
+        "primary_bone": "Y",
+        "secondary_bone": "X",
+        "space_transform": false,
         "forward_axis": "X",
-        "up_axis": "Z"
+        "up_axis": "Z",
+        "apply_scale": "FBX_SCALE_NONE",
+        "anim_sampling": 0.5,
+        "anim_simplify": 0,
+        "add_leaf_bones": false
     },
     "Unity": {
         "name": "Unity",
-        "forward_axis": "-Z",
-        "up_axis": "Y"
+        "space_transform": false,
+        "primary_bone": "Y",
+        "secondary_bone": "X",
+        "forward_axis": "-Y",
+        "up_axis": "Z",
+        "apply_scale": "FBX_SCALE_ALL",
+        "anim_sampling": 0.5,
+        "anim_simplify": 0,
+        "add_leaf_bones": false
+
     },
     "Cocos": {
         "name": "Cocos",
+        "space_transform": false,
+        "primary_bone": "Y",
+        "secondary_bone": "X",
         "forward_axis": "-Z",
-        "up_axis": "Y"
+        "up_axis": "Y",
+        "apply_scale": "FBX_SCALE_ALL",
+        "anim_sampling": 0.5,
+        "anim_simplify": 0,
+        "add_leaf_bones": false
     }
 }
