--- a/configs/engine_configs.json
+++ b/configs/engine_configs.json
@@ -26,12 +26,12 @@
     },
     "Cocos": {
         "name": "Cocos",
-        "space_transform": false,
+        "space_transform": true,
         "primary_bone": "Y",
         "secondary_bone": "X",
         "forward_axis": "X",
-        "up_axis": "Z",
-        "apply_scale": "FBX_SCALE_NONE",
+        "up_axis": "Y",
+        "apply_scale": "FBX_SCALE_ALL",
         "anim_sampling": 0.5,
         "anim_simplify": 0,
         "add_leaf_bones": false
